project_sources/collector/fixtures/powershell_analysis/bad/plaintext_securestring.ps1
$PlainText = "not-a-real-secret"
$SecureValue = ConvertTo-SecureString $PlainText -AsPlainText -Force
Write-Output $SecureValue.Length
